# getnovel

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  scrapy.cfg  setup.cfg  setup.py
docs/source/: api.rst  conf.py  index.rst
getnovel/: __init__.py
getnovel/app/spiders/: truyenchu.py  twpiaotian.py  webtruyen.py
getnovel/utils/: crawler.py  epub.py  file.py
novelutils/: __init__.py
novelutils/app/spiders/: 69shu.py  bachngocsach.py  metruyenchu.py  ptwxz.py  sixnineshu.py  sstruyen.py  tangthuvien.py  truyenchu.py  truyencv.py  truyencv_sub.py  truyendkm.py  truyenfull.py  twpiaotian.py  uukanshu.py  vtruyen.py
novelutils/utils/: crawler.py  epub.py  file.py
requirements/: build.txt  common.txt  dev.txt
src/getnovel/: __init__.py  __main__.py
src/getnovel/app/: itemloaders.py  items.py  middlewares.py  pipelines.py  settings.py
src/getnovel/app/spiders/: __init__.py  adev_spider.py  bachngocsach.py  dtruyen.py  metruyencv.py  next_gen_spider.py  piaotian.py  ptwxz.py  sixnineshu.py  sixnineshuba.py  sstruyen.py  tangthuvien.py  truyenchu.py  truyenfull.py  truyenfull_rework.py  truyenyy.py  twpiaotian.py  uukanshu.py  vtruyen.py  webtruyen.py
src/getnovel/data/: __init__.py  scrapy_settings.py
src/getnovel/utils/: __init__.py  arguments.py  crawler.py  epub.py  file.py  gooey_gui.py  typehint.py
tests/: find_packages.py  test_argparse.py  test_cleanfile.py  test_crawlnovel.py  test_epubmaker.py  test_fix_bad_indent.py
