[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "getnovel"
description = "Tool based on Scrapy framework to Get novel on websites"
authors = [{ name = "Vũ Thừa Khang", email = "vuthuakhangit@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["crawler", "scrapy"]
license = { text = "MIT" }
dynamic = ["version"]
classifiers = [
    "Framework :: Scrapy",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Scrapy",
    "Operating System :: OS Independent",
]
dependencies = [
    "scrapy >= 2.10.0",
    "pillow >= 10.0.0",
    "tldextract >= 3.4.4",
    "pytz >= 2023.3",
]

[project.optional-dependencies]
dev = [
    "ipython >= 8.14.0",
    "black >= 23.7.0",
    "ruff >= 0.0.285",
    "prospector >= 1.10.2",
    "sphinx >= 6.2.1",
    "sphinx_rtd_theme >= 1.2.2",
    "numpydoc >= 1.5.0",
    "build >= 0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/vtkhang/getnovel"
"Bug Tracker" = "https://github.com/vtkhang/getnovel/issues"

[project.scripts]
getnovel = "getnovel:run_main"

[tool.setuptools.dynamic]
version = { attr = "getnovel.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["ALL"]

[tool.ruff.pydocstyle]
convention = "numpy"
