[metadata]
name = getnovel
version = 1.2.1
description = Tool based on Scrapy framework to get novel from websites.
author = Vũ Thừa Khang
author_email = vuthuakhangit@gmail.com
url = https://github.com/vtkhang/getnovel
long_description = file: README.md
keywords = web scraping
classifiers =
    Framework :: Scrapy,
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
    = src
install_requires =
    scrapy == 2.5.1
    beautifulsoup4 >= 4.11.1
    Pillow >= 9.1.0
    tldextract >= 3.2.1
    validators >= 0.18.2
    importlib-metadata >= 4.2.0; python_version<"3.8"
    importlib-resources >= 5.7.1; python_version<"3.8"

[options.packages.find]
where = src
include = getnovel*

[options.package_data]
data = template/*

[options.entry_points]
console_scripts =
    getnovel = getnovel:run_main

[options.extras_require]
dev = 
    black >= 22.3.0
    ipython >= 7.32.0
    flake8 >= 4.0.1

[flake8]
max-line-length = 88